optimizations in trace widget